fix: correct mobile panel visibility and scrolling

--- a/public/client.html
+++ b/public/client.html
@@ -279,6 +279,9 @@
             #detail-panel.open {
                 transform: translateX(0);
             }
+            #events-container {
+                /* Desktop uses the same single-column list, flexbox handles it */
+            }
             .panel-header {
                 cursor: default; /* No dragging on desktop */
             }
