style: add scroll to detail panel

--- a/public/client.html
+++ b/public/client.html
@@ -201,7 +201,8 @@
             visibility: visible; /* Show when open */
         }
         #detail-content {
-             padding: 20px;
+            padding: 20px;
+            overflow-y: scroll;
         }
         #qr-code-container {
             position: absolute;
