--- a/public/client.html
+++ b/public/client.html
@@ -41,7 +41,7 @@
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
-            transform: translateY(calc(100% - 65px)); /* Adjusted to only show header */
+            transform: translateY(calc(100% - 75px)); /* Adjusted to only show header */
         }
         #list-panel.open {
             transform: translateY(0);
@@ -153,7 +153,7 @@
             background-color: #f0f0f0; /* A subtle background color change */
         }
         .card:last-child {
-            margin-bottom: 0;
+            margin-bottom: 15px;
         }
         .card-img {
             width: 100%;
