Adjust panel position and header margin

--- a/public/client.html
+++ b/public/client.html
@@ -41,7 +41,7 @@
             border-top-left-radius: 16px;
             border-top-right-radius: 16px;
             box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
-            transform: translateY(calc(100% - 75px)); /* Adjusted to only show header */
+            transform: translateY(calc(100% - 90px)); /* Adjusted to only show header */
         }
         #list-panel.open {
             transform: translateY(0);
@@ -54,6 +54,7 @@
             padding: 10px 20px;
             text-align: center;
             cursor: pointer;
+            margin-bottom: 15px;
         }
         #list-panel .panel-header {
             cursor: grab;
