--- a/public/client.html
+++ b/public/client.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="EventsMap">
     <style>
@@ -54,7 +55,7 @@
             padding: 10px 20px;
             text-align: center;
             cursor: pointer;
-            margin-bottom: 15px;
+            margin-bottom: 45px;
         }
         #list-panel .panel-header {
             cursor: grab;
