--- a/public/client.html
+++ b/public/client.html
@@ -64,6 +64,9 @@
         #list-panel .panel-header {
             cursor: grab;
         }
+        #detail-panel .panel-header {
+            margin-bottom: 0;
+        }
         .panel-handle {
             width: 40px;
             height: 5px;
