Update detail content padding

--- a/public/client.html
+++ b/public/client.html
@@ -217,6 +217,7 @@
         #detail-content {
             padding: 20px;
             overflow-y: scroll;
+            padding-top: 0px;
         }
         #qr-code-container {
             position: absolute;
